[package]
name = "BookWP"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["postgres", "chrono", "uuid", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.15"

